--- a/data-from-server/templates/landing.html
+++ b/data-from-server/templates/landing.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>Welcome</title>
   </head>
   <body>
     {% include 'header.html' %}
