--- a/data-from-server/templates/create.html
+++ b/data-from-server/templates/create.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Create new Project</title>
 
 </head>
 
@@ -13,13 +13,16 @@
         #projProgress p {
             opacity: 0;
         }
-        #projProgress p.done{
+
+        #projProgress p.done {
             opacity: 1;
         }
-        #projProgress p.done progress{
+
+        #projProgress p.done progress {
             display: none;
         }
-        #projProgress p.active{
+
+        #projProgress p.active {
             font-weight: bold;
             opacity: 1;
         }
@@ -44,17 +47,14 @@
     <div id="projProgress">
         <h2>Steps</h2>
         <p class="active">Fill form</p>
-        <p>Setting up Project data <progress></progress> </p>
-        <p>Creating ICO contract [REQUIRES INTERACTION ON METAMASK] <progress></progress></p>
-        <p>Creating Token contract [REQUIRES INTERACTION ON METAMASK] <progress></progress></p>
-        <p>Setting up Token on ICO contract [REQUIRES INTERACTION ON METAMASK] <progress></progress></p>
-        <p>Adding to platform [REQUIRES INTERACTION ON METAMASK] <progress></progress></p>
+        <p>Creating projects in the platform [REQUIRES INTERACTION ON METAMASK]
+            <progress></progress>
+        </p>
         <p>Done. Find your project in the
             <a href="/dashboard">Platform Dashboard</a>
         </p>
     </div>
 
-    <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.min.js"></script>
     <script>
         const promisify = (func, ...args) =>
             new Promise((resolve, reject) =>
@@ -71,10 +71,19 @@
             return e;
         };
 
-        const ICOABI = {{ ico_abi | safe }};
-        const ICOBytecode = "{{ ico_b }}";
-        const TokenABI = {{ token_abi | safe }};
-        const TokenBytecode = "{{ token_b }}";
+        const wait_for_tx = (h) =>
+            new Promise((resolve, reject) => {
+                promisify(web3.eth.getTransactionReceipt, h)
+                    .then(receipt => {
+                        if (receipt != null) {
+                            setTimeout(() => resolve(receipt), 300);
+                        } else {
+                            resolve(wait_for_tx(h));
+                        }
+                    })
+                    .catch(reject);
+            });
+
         const PlatformABI = {{ platform_abi | safe }};
         const PlatformAddress = "{{ platform_contract }}";
         const account = "{{ user }}";
@@ -94,48 +103,15 @@
             const project_symbol = document.getElementById('project_symbol').value;
             const token_price = document.getElementById('token_price').value;
 
-            const ICOContract = web3.eth.contract(ICOABI);
-            const TokenContract = web3.eth.contract(TokenABI);
             const PlatformContract = web3.eth.contract(PlatformABI);
-            // console.debug('contracts', ICOContract, TokenContract);
-            //4cf71716b122f94396acf9c48484558de4c81497998c7862b4326c543e2897c7
-            Promise.all([promisify(web3.eth.estimateGas, { data: ICOBytecode }), promisify(web3.eth.estimateGas, { data: TokenBytecode })])
-                .then(([icoGasEstimate, tokenGasEstimate]) => {
-                    // console.debug('estimates', icoGasEstimate, tokenGasEstimate);
-                    stepUp();
-                    return new Promise((resolve, reject) => {
-                        ICOContract.new({ data: `0x${ICOBytecode}`, from: account, gas: icoGasEstimate }, (err, icoInstance) => {
-                            if (err) {
-                                reject(err);
-                            } else {
-                                if (icoInstance.address) {
-                                    stepUp();
-                                    // console.debug('ICO created', icoInstance);
-                                    TokenContract.new(icoInstance.address, project_name, project_symbol, { data: `0x${TokenBytecode}`, from: account, gas: tokenGasEstimate * 2 }, (err, tokenInstance) => {
-                                        if (err) {
-                                            reject(err);
-                                        } else {
-                                            if (tokenInstance.address) {
-                                                stepUp();
-                                                // console.debug('Token created', tokenInstance);
-                                                resolve(promisify(icoInstance.init.bind(icoInstance), tokenInstance.address, token_price)
-                                                    .then(() => [icoInstance.address, tokenInstance.address]));
-                                            }
-                                        }
-                                    })
-                                }
-                            }
-                        });
-                    });
-                })
-                .then(([icoAddress, tokenAddress]) => {
-                    stepUp();
-                    const platformInstance = PlatformContract.at(PlatformAddress);
-                    // console.debug('addresses', icoAddress, tokenAddress);
-                    // console.debug(platformInstance);
-                    return promisify(platformInstance.addProject.bind(platformInstance), project_name, tokenAddress, icoAddress);
-                })
-                .then(x => { stepUp(); return x })
+
+            const platformInstance = PlatformContract.at(PlatformAddress);
+            // console.debug('addresses', icoAddress, tokenAddress);
+            // console.debug(platformInstance);
+            promisify(platformInstance.addProject.bind(platformInstance), project_name, project_symbol, token_price)
+                .then(x => {console.log('Pending transaction', x); return x;})
+                .then(wait_for_tx)
+                .then(stepUp)
                 .then(console.debug)
                 .catch(console.error);
         }
