--- a/message-board/templates/index.html
+++ b/message-board/templates/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Message board</title>
+    <style>
+        article img[src="/static/verified.svg"] {
+            opacity: 0;
+        }
+        footer {
+            display: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,16 +32,28 @@
         {% for m in messages %}
         <article data-sig="{{ m.signature }}">
             <p>{{ m.message }}</p>
-            <a href="http://ropsten.etherscan.io/address/{{ m.author }}" rel="author">{{ m.author }}</a>
-            <aside>
-                <small>{{ m.signature }}</small>
-            </aside>
+            <details>
+                <summary>
+                    <img src="/static/verified.svg">
+                    <a href="http://ropsten.etherscan.io/address/{{ m.author }}" rel="author">{{ m.author }}</a>
+                </summary>
+                <aside>
+                    Signature <small>{{ m.signature }}</small>
+                </aside>
+            </details>
         </article>
         <hr> {% endfor %}
     </main>
 
+    <footer>
+        You can independently verify any message posted here with an online signature validator: <a href="https://etherscan.io/verifySig">Etherscan</a> <a href="https://www.etherchain.org/tools/verifySignature">Etherchain</a> <a href="https://www.myetherwallet.com/signmsg.html">MyEtherWallet</a>
+    </footer>
+
     <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.min.js"></script>
+    <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/ddb27f8d/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.js"></script>
     <script>
+        const util = ethereumjs.Util;
+
         const promisify = (func, ...args) =>
             new Promise((resolve, reject) =>
                 func(...args, (err, value) =>
@@ -59,6 +81,7 @@
                             },
                             method: 'POST',
                         }))
+                        .then(resp => resp.ok ? Promise.resolve(resp) : Promise.reject(resp))
                         .then(() => window.location.reload()))
                 .catch(console.error);
         };
@@ -70,6 +93,26 @@
                 and validate the post author by verifying the
                 signature
             */
+            const with_prefix = (message) => {
+                return "\u0019Ethereum Signed Message:\n" + message.length + message;
+            }
+
+            document.querySelectorAll('main>article')
+                .forEach(article => {
+                    const author = article.querySelector('a[rel=author]').innerText;
+                    const msg = article.querySelector('p').innerText;
+                    const sig = article.dataset.sig;
+
+                    const msgHash = util.sha3(with_prefix(msg));
+                    const sigObj = util.fromRpcSig(sig);
+                    const publicKey = util.ecrecover(msgHash, sigObj.v, sigObj.r, sigObj.s);
+                    const addressBuffer = util.publicToAddress(publicKey);
+                    const address = util.bufferToHex(addressBuffer);
+
+                    if (author === address) {
+                        article.querySelector('img[src="/static/verified.svg"]').style.opacity = 1;
+                    }
+                });
         }
 
         window.onload = () => {
@@ -78,14 +121,12 @@
                 // Use Mist/MetaMask's provider
                 web3 = new Web3(web3.currentProvider);
 
-                // TODO enable post form
                 promisify(web3.eth.getAccounts)
                     .then(accounts => {
                         if (accounts.length > 0) {
                             document.querySelector("form").style.display = "block";
                         }
                     })
-
             } else {
                 web3 = new Web3(new Web3.providers.HttpProvider('https://ropsten.infura.io/***REMOVED***'));
             }
