Remove infura API key

--- a/message-board/templates/index.html
+++ b/message-board/templates/index.html
@@ -128,7 +128,7 @@
                         }
                     })
             } else {
-                web3 = new Web3(new Web3.providers.HttpProvider('https://ropsten.infura.io/***REMOVED***'));
+                web3 = new Web3(new Web3.providers.HttpProvider('https://ropsten.infura.io/'));
             }
             validateMessages();
         };          
