--- a/metamask-login/templates/login.html
+++ b/metamask-login/templates/login.html
@@ -77,7 +77,7 @@
                 // Use Mist/MetaMask's provider
                 web3 = new Web3(web3.currentProvider);
             } else {
-                web3 = new Web3(new Web3.providers.HttpProvider('https://ropsten.infura.io/***REMOVED***'));
+                web3 = new Web3(new Web3.providers.HttpProvider('https://ropsten.infura.io/'));
             }
             fillAccounts();
         };          
